[metadata]
name = vba_parser
description = Package used to show and edit pandas DataFrame in GUI
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9

[options]
packages =
    vba_parser
install_requires = 
    requests >= 2.26.0
    
python_requires = >=3.7.5
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=6.0.2
    pytest-cov>=3.0.0
    mock>=4.0.3
    autopep8>=1.5.5
    mypy>=0.910
    flake8>=4.0.0
    tox>=3.21.4

[options.package_data]
vba_parser = py.typed

[flake8]
exclude =
    __pycache__,
    venv,
max-line-length = 99
count = true
max-complexity = 10
